# simple-semantic-search

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt  requirements_dev.txt
app/: auth.py  config.py  database.py  embedding.py  models.py
tests/: test_main.py  test_models.py
tests/database/: test_serializer.py  test_vector_db.py
