[tool.poetry]
name = "simple-semantic-search"
version = "0.1.0"
description = ""
authors = ["Will Parr"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.8.2"
shortuuid = "^1.0.13"
numpy = "^2.0.1"
sqlite-vec = "^0.1.2a7"
sentence-transformers = "^3.0.1"
fastapi = { version = "^0.112.1", extras = ["standard"] }

[tool.poetry.group.dev.dependencies]
ipython = "^8.26.0"
pytest = "^8.3.2"

[tool.black]
line-length = 120

[tool.flake8]
max-line-length = 120
ignore = ["E266", "W503", "E203", "E402"]
exclude = [".git", "__pycache__", "build", "dist", ".venv"]

[tool.isort]
profile = "black"
skip = [".yml"]

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
pythonpath = "."
